# slack-mcp

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  Makefile  README.md  SETUP.md  manifest.json  pyproject.toml  requirements.txt  server.json  slack-mcp.mcpb
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: personal-pii-scrub.yml  security-review.yml  test.yml
hooks/: install-ping.py
slack_mcp/: __init__.py  audit.py  client.py  drafts.py  scrubber.py  server.py  vault_export.py  workspaces.py
slack_mcp/_shared/: __init__.py  ids.py  markdown.py  slack_ts.py
slack_mcp/tools/: __init__.py  channels.py  edits.py  marks.py  messages.py  reactions.py  send.py  threads.py  users.py  workspaces.py
tests/integration/: test_full_pipeline.py
